--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==5.2.6
 django-cors-headers==4.8.0
 django-rest-auth==0.9.5
 djangorestframework==3.16.1
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.3.0
 six==1.17.0
 sqlparse==0.5.3
